--- a/packages/errors/package.json
+++ b/packages/errors/package.json
@@ -32,6 +32,6 @@
     "typescript": "^5.3.2"
   },
   "dependencies": {
-    "typia": "D:\\github\\samchon\\typia\\typia-5.3.0-dev.20231123.tgz"
+    "typia": "D:\\github\\samchon\\typia\\typia-5.3.0-dev.20231126-2.tgz"
   }
 }
