--- a/packages/errors/package.json
+++ b/packages/errors/package.json
@@ -6,7 +6,7 @@
   "main": "index.js",
   "scripts": {
     "build": "rimraf bin && tsc",
-    "prepare": "ts-patch install",
+    "prepare": "ts-patch install && typia patch",
     "prettier": "prettier ./src/**/*.ts --write",
     "setup": "node build/setup.js",
     "start": "node index"
@@ -29,9 +29,9 @@
   "devDependencies": {
     "rimraf": "^5.0.5",
     "ts-patch": "^3.0.2",
-    "typescript": "5.2.2"
+    "typescript": "^5.3.2"
   },
   "dependencies": {
-    "typia": "D:\\github\\samchon\\typia\\typia-5.3.0-dev.20231122.tgz"
+    "typia": "D:\\github\\samchon\\typia\\typia-5.3.0-dev.20231126-2.tgz"
   }
 }
