--- a/packages/benchmark/package.json
+++ b/packages/benchmark/package.json
@@ -73,6 +73,6 @@
     "suppress-warnings": "^1.0.2",
     "tstl": "^2.5.13",
     "uuid": "^9.0.1",
-    "typia": "D:\\github\\samchon\\typia\\typia-5.3.1-dev.20231127-4.tgz"
+    "typia": "D:\\github\\samchon\\typia\\typia-5.3.1.tgz"
   }
 }
