--- a/packages/benchmark/package.json
+++ b/packages/benchmark/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "build": "rimraf bin && tsc",
     "build:actions": "rimraf bin && tsc -p tsconfig.actions.json",
-    "prepare": "ts-patch install && typia patch",
+    "prepare": "ts-patch install",
     "prettier": "prettier ./src/**/*.ts --write",
     "start": "node bin",
     "template": "ts-node src/template && npm run prettier && npm run build"
@@ -73,6 +73,6 @@
     "suppress-warnings": "^1.0.2",
     "tstl": "^2.5.13",
     "uuid": "^9.0.1",
-    "typia": "D:\\github\\samchon\\typia\\typia-5.3.3.tgz"
+    "typia": "D:\\github\\samchon\\typia\\typia-5.3.4.tgz"
   }
 }
