--- a/packages/errors/package.json
+++ b/packages/errors/package.json
@@ -6,7 +6,7 @@
   "main": "index.js",
   "scripts": {
     "build": "rimraf bin && tsc",
-    "prepare": "ts-patch install && typia patch",
+    "prepare": "ts-patch install",
     "prettier": "prettier ./src/**/*.ts --write",
     "setup": "node build/setup.js",
     "start": "node index"
@@ -32,6 +32,6 @@
     "typescript": "^5.3.2"
   },
   "dependencies": {
-    "typia": "D:\\github\\samchon\\typia\\typia-5.3.3.tgz"
+    "typia": "D:\\github\\samchon\\typia\\typia-5.3.4.tgz"
   }
 }
