--- a/packages/benchmark/package.json
+++ b/packages/benchmark/package.json
@@ -63,7 +63,7 @@
     "ts-node": "^10.9.1",
     "ts-patch": "^3.1.0",
     "tstl": "^2.5.13",
-    "typescript": "5.2.2",
+    "typescript": "^5.3.2",
     "uuid": "^8.3.2",
     "zod": "^3.19.1"
   },
