--- a/packages/typescript-json/package.json
+++ b/packages/typescript-json/package.json
@@ -1,6 +1,6 @@
 {
   "name": "typescript-json",
-  "version": "5.3.5",
+  "version": "5.3.6",
   "description": "Superfast runtime validators with only one line",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -61,13 +61,13 @@
   },
   "homepage": "https://typia.io",
   "dependencies": {
-    "typia": "5.3.5"
+    "typia": "5.3.6"
   },
   "peerDependencies": {
     "typescript": ">=4.8.0 <5.4.0"
   },
   "stackblitzs": {
-    "startCommand": "npm install && npm run build && cd packages/test && npm install && npm run build:actions && npm start"
+    "startCommand": "npm install && npm run test"
   },
   "files": [
     "LICENSE",
