--- a/website/package.json
+++ b/website/package.json
@@ -22,6 +22,7 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@monaco-editor/react": "^4.5.1",
+    "@mui/icons-material": "^5.15.4",
     "@mui/material": "^5.12.0",
     "lz-string": "^1.5.0",
     "monaco-editor": "^0.39.0",
@@ -41,6 +42,6 @@
     "prettier": "^2.8.8",
     "rimraf": "^5.0.0",
     "ts-node": "^10.9.1",
-    "typia": "^5.3.9"
+    "typia": "^5.3.10"
   }
 }
