--- a/packages/typescript-json/package.json
+++ b/packages/typescript-json/package.json
@@ -1,6 +1,6 @@
 {
   "name": "typescript-json",
-  "version": "5.3.12-dev.20240119",
+  "version": "5.3.12",
   "description": "Superfast runtime validators with only one line",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -61,7 +61,7 @@
   },
   "homepage": "https://typia.io",
   "dependencies": {
-    "typia": "5.3.12-dev.20240119"
+    "typia": "5.3.12"
   },
   "peerDependencies": {
     "typescript": ">=4.8.0 <5.4.0"
