--- a/errors/package.json
+++ b/errors/package.json
@@ -32,6 +32,6 @@
     "typescript": "^5.3.2"
   },
   "dependencies": {
-    "typia": "D:\\github\\samchon\\typia\\typia-5.4.0-dev.20240124-2.tgz"
+    "typia": "D:\\github\\samchon\\typia\\typia-5.4.0.tgz"
   }
 }
