Fix samchon/nestia#777 - JSON schema for `Date | null` type.
There had been a bug that `Date | null` type being considered as non nullable type when generating JSON schema.

This PR fixes the bug, so that no problem would be occured more.

--- a/website/package.json
+++ b/website/package.json
@@ -42,6 +42,6 @@
     "prettier": "^2.8.8",
     "rimraf": "^5.0.0",
     "ts-node": "^10.9.1",
-    "typia": "^5.4.1"
+    "typia": "5.4.2"
   }
 }
