--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "typia",
-  "version": "5.4.1",
+  "version": "5.4.2",
   "description": "Superfast runtime validators with only one line",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -79,6 +79,7 @@
     "@types/ts-expose-internals": "npm:ts-expose-internals@5.3.2",
     "@typescript-eslint/eslint-plugin": "^5.59.11",
     "@typescript-eslint/parser": "^5.59.11",
+    "chalk": "^4.0.0",
     "prettier": "^2.6.2",
     "rimraf": "^5.0.5",
     "ts-node": "^10.9.1",
