Fix #952 - stringify bug when union with `toJSON()`.
When trying to `typia.json.stringify<T>()` function to an union type which contains `toJSON()` member functioned type, it failed to detect the exact union type, because it had not validated the return value of the `toJSON()` method.

Therefore, this PR fixes the bug by traveling the `toJSON()` function's returned values.

```typescript
import typia from "typia";

typia.json.createStringify<A|B|C|D|E>();

interface A {
  id: string;
  date: Date;
}
interface B {
  id: string;
  date: string;
}
interface C {
  id: string;
  date: { linux: number };
}
interface D {
  id: string;
  date: {
    toJSON(): { iso: string };
  };
}
interface E {
  id: string;
  date: {
    toJSON(): { value: number };
  };
}
```

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "typia",
-  "version": "5.4.6",
+  "version": "5.4.7-dev.20240207",
   "description": "Superfast runtime validators with only one line",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
