--- a/benchmark/package.json
+++ b/benchmark/package.json
@@ -73,6 +73,6 @@
     "suppress-warnings": "^1.0.2",
     "tstl": "^2.5.13",
     "uuid": "^9.0.1",
-    "typia": "D:\\github\\samchon\\typia\\typia-5.4.6.tgz"
+    "typia": "D:\\github\\samchon\\typia@master\\typia-5.4.7-dev.20240207.tgz"
   }
 }
