Change build.yml condition

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,5 +1,13 @@
 name: build
-on: [push, pull_request]
+on: 
+  push:
+    paths:
+      - 'src/**'
+      - 'test/**'
+  pull_request:
+    paths:
+      - 'src/**'
+      - 'test/**'
 
 jobs:
   Ubuntu:
