--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,11 +4,12 @@ on:
     paths:
       - 'src/**'
       - 'test/**'
+      - 'package.json'
   pull_request:
     paths:
       - 'src/**'
       - 'test/**'
-
+      - 'package.json'
 jobs:
   Ubuntu:
     runs-on: ubuntu-latest
