--- a/website/package.json
+++ b/website/package.json
@@ -43,6 +43,6 @@
     "next-sitemap": "^4.0.7",
     "rimraf": "^5.0.0",
     "ts-node": "^10.9.1",
-    "typia": "5.4.14"
+    "typia": "^5.5.0-dev.20240303-2"
   }
 }
