--- a/packages/typescript-json/package.json
+++ b/packages/typescript-json/package.json
@@ -1,6 +1,6 @@
 {
   "name": "typescript-json",
-  "version": "5.5.0-dev.20240305",
+  "version": "5.5.0",
   "description": "Superfast runtime validators with only one line",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -62,7 +62,7 @@
   },
   "homepage": "https://typia.io",
   "dependencies": {
-    "typia": "5.5.0-dev.20240305"
+    "typia": "5.5.0"
   },
   "peerDependencies": {
     "typescript": ">=4.8.0 <5.5.0"
