--- a/debug/package.json
+++ b/debug/package.json
@@ -15,6 +15,6 @@
     "typescript": "^5.3.2"
   },
   "dependencies": {
-    "typia": "D:\\github\\samchon\\typia\\typia-5.5.0-dev.20240305.tgz"
+    "typia": "D:\\github\\samchon\\typia\\typia-5.5.1-dev.20240307-2.tgz"
   }
 }
