--- a/debug/package.json
+++ b/debug/package.json
@@ -12,9 +12,9 @@
   "devDependencies": {
     "ts-node": "^10.9.2",
     "ts-patch": "^3.1.2",
-    "typescript": "^5.3.2"
+    "typescript": "^5.4.2"
   },
   "dependencies": {
-    "typia": "D:\\github\\samchon\\typia\\typia-5.5.1-dev.20240307-2.tgz"
+    "typia": "D:\\github\\samchon\\typia\\typia-5.5.2.tgz"
   }
 }
