Memoize esm.sh result

--- a/website/package.json
+++ b/website/package.json
@@ -34,6 +34,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "rollup": "^4.13.0",
+    "tstl": "^2.5.13",
     "typescript": "^5.4.2",
     "typia": "^5.5.5"
   },
