--- a/benchmark/package.json
+++ b/benchmark/package.json
@@ -6,7 +6,6 @@
   "main": "bin/index.js",
   "scripts": {
     "build": "rimraf bin && tsc",
-    "build:actions": "rimraf bin && tsc -p tsconfig.actions.json",
     "prepare": "ts-patch install",
     "prettier": "prettier ./src/**/*.ts --write",
     "start": "node bin",
@@ -59,10 +58,10 @@
     "rimraf": "^3.0.2",
     "source-map-support": "^0.5.21",
     "suppress-warnings": "^1.0.2",
-    "tgrid": "^0.8.7",
+    "tgrid": "^0.10.0",
     "ts-node": "^10.9.1",
     "ts-patch": "^3.1.0",
-    "tstl": "^2.5.13",
+    "tstl": "^3.0.0",
     "typescript": "^5.3.2",
     "uuid": "^8.3.2",
     "zod": "^3.19.1"
@@ -71,8 +70,8 @@
     "randexp": "^0.5.3",
     "source-map-support": "^0.5.21",
     "suppress-warnings": "^1.0.2",
-    "tstl": "^2.5.13",
+    "tstl": "^3.0.0",
     "uuid": "^9.0.1",
-    "typia": "D:\\github\\samchon\\typia@master\\typia-5.5.7.tgz"
+    "typia": "D:\\github\\samchon\\typia\\typia-5.5.7.tgz"
   }
 }
