--- a/debug/package.json
+++ b/debug/package.json
@@ -15,6 +15,6 @@
     "typescript": "^5.4.2"
   },
   "dependencies": {
-    "typia": "D:\\github\\samchon\\typia@master\\typia-5.5.7-dev.20240320.tgz"
+    "typia": "D:\\github\\samchon\\typia\\typia-5.5.8-dev.20240402.tgz"
   }
 }
