--- a/website/.gitignore
+++ b/website/.gitignore
@@ -1,7 +1,11 @@
 .next
 node_modules/
 out/
-public/api/
 raw/
+
+public/api/
+public/compilers/
+public/robots.txt
+public/sitemap*.xml
 
 !package-lock.json
