--- a/benchmark/package.json
+++ b/benchmark/package.json
@@ -72,7 +72,7 @@
     "source-map-support": "^0.5.21",
     "suppress-warnings": "^1.0.2",
     "tstl": "^3.0.0",
-    "typia": "D:\\github\\samchon\\typia\\typia-6.0.3.tgz",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "typia": "D:\\github\\samchon\\typia\\typia-6.0.4.tgz"
   }
 }
