--- a/benchmark/package.json
+++ b/benchmark/package.json
@@ -9,7 +9,7 @@
     "prepare": "ts-patch install",
     "prettier": "prettier ./src/**/*.ts --write",
     "start": "node bin",
-    "template": "ts-node src/template && npm run prettier && npm run build"
+    "template": "tsx src/template && npm run prettier && npm run build"
   },
   "repository": {
     "type": "git",
@@ -59,7 +59,7 @@
     "source-map-support": "^0.5.21",
     "suppress-warnings": "^1.0.2",
     "tgrid": "^0.10.0",
-    "ts-node": "^10.9.1",
+    "tsx": "^4.11.2",
     "ts-patch": "^3.1.0",
     "tstl": "^3.0.0",
     "typescript": "^5.3.2",
@@ -76,3 +76,4 @@
     "typia": "../typia-6.0.5.tgz"
   }
 }
+
