feat: Update prepare script in package.json
The prepare script in package.json has been updated to include the
'typia patch' command. This change ensures that the typia patch is
applied during the preparation phase of the project setup.

feat: add typia patch to prepare script

This commit modifies the 'prepare' script in the package.json file of
the benchmark directory. The 'ts-patch install' command is now followed
by 'typia patch'. This change ensures that typia patch is run during
the preparation phase.

--- a/benchmark/package.json
+++ b/benchmark/package.json
@@ -6,7 +6,7 @@
   "main": "bin/index.js",
   "scripts": {
     "build": "rimraf bin && tsc",
-    "prepare": "ts-patch install",
+    "prepare": "ts-patch install && typia patch",
     "prettier": "prettier ./src/**/*.ts --write",
     "start": "node bin",
     "template": "tsx src/template && npm run prettier && npm run build"
@@ -76,4 +76,3 @@
     "typia": "../typia-6.0.5.tgz"
   }
 }
-
