--- a/debug/package.json
+++ b/debug/package.json
@@ -15,6 +15,6 @@
     "typescript": "^5.4.2"
   },
   "dependencies": {
-    "typia": "D:\\github\\samchon\\typia\\typia-6.0.3-dev.20240417.tgz"
+    "typia": "../typia-6.0.4.tgz"
   }
 }
