--- a/packages/typescript-json/package.json
+++ b/packages/typescript-json/package.json
@@ -1,6 +1,6 @@
 {
   "name": "typescript-json",
-  "version": "6.0.4",
+  "version": "6.0.5",
   "description": "Superfast runtime validators with only one line",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -13,7 +13,7 @@
     "test": "npm run package:tgz",
     "test:template": "npm run test template",
     "-------------------------------------------------": "",
-    "build": "rimraf lib && tsc --declaration false && tsc --emitDeclarationOnly",
+    "build": "rimraf lib && tsc",
     "dev": "rimraf lib && tsc --watch",
     "eslint": "eslint ./**/*.ts",
     "eslint:fix": "eslint ./**/*.ts --fix",
@@ -62,7 +62,7 @@
   },
   "homepage": "https://typia.io",
   "dependencies": {
-    "typia": "6.0.4"
+    "typia": "6.0.5"
   },
   "peerDependencies": {
     "typescript": ">=4.8.0 <5.5.0"
