--- a/benchmark/package.json
+++ b/benchmark/package.json
@@ -6,10 +6,10 @@
   "main": "bin/index.js",
   "scripts": {
     "build": "rimraf bin && tsc",
-    "prepare": "ts-patch install && typia patch",
+    "prepare": "ts-patch install",
     "prettier": "prettier ./src/**/*.ts --write",
     "start": "node bin",
-    "template": "tsx src/template && npm run prettier && npm run build"
+    "template": "ts-node src/template && npm run prettier && npm run build"
   },
   "repository": {
     "type": "git",
@@ -59,8 +59,8 @@
     "source-map-support": "^0.5.21",
     "suppress-warnings": "^1.0.2",
     "tgrid": "^0.10.0",
-    "tsx": "^4.11.2",
-    "ts-patch": "^3.1.0",
+    "ts-node": "^10.9.1",
+    "ts-patch": "^3.2.0",
     "tstl": "^3.0.0",
     "typescript": "^5.3.2",
     "uuid": "^8.3.2",
@@ -73,6 +73,6 @@
     "suppress-warnings": "^1.0.2",
     "tstl": "^3.0.0",
     "uuid": "^9.0.1",
-    "typia": "../typia-6.0.5.tgz"
+    "typia": "../typia-6.0.6-dev.20240604.tgz"
   }
 }
