--- a/errors/package.json
+++ b/errors/package.json
@@ -28,10 +28,10 @@
   "homepage": "https://github.com/samchon/typia#readme",
   "devDependencies": {
     "rimraf": "^5.0.5",
-    "ts-patch": "^3.0.2",
+    "ts-patch": "^3.2.0",
     "typescript": "^5.3.2"
   },
   "dependencies": {
-    "typia": "../typia-6.0.5.tgz"
+    "typia": "../typia-6.0.6-dev.20240604.tgz"
   }
 }
