--- a/package.json
+++ b/package.json
@@ -1,28 +1,32 @@
 {
   "name": "typia",
-  "version": "6.0.5",
+  "version": "6.0.6-dev.20240604",
   "description": "Superfast runtime validators with only one line",
-  "main": "./lib/index.js",
-  "module": "./lib/index.mjs",
-  "types": "./lib/index.d.mts",
+  "main": "lib/index.js",
+  "typings": "lib/index.d.ts",
+  "module": "lib/index.mjs",
   "bin": {
     "typia": "./lib/executable/typia.js"
+  },
+  "tsp": {
+    "tscOptions": {
+      "parseAllJsDoc": true
+    }
   },
   "scripts": {
     "test": "npm run package:tgz",
     "test:template": "npm run test template",
     "-------------------------------------------------": "",
-    "build": "tsup",
-    "dev": "tsup --watch",
+    "build": "rimraf lib && tsc && rollup -c",
+    "dev": "rimraf lib && tsc --watch",
     "eslint": "eslint ./**/*.ts",
     "eslint:fix": "eslint ./**/*.ts --fix",
     "prettier": "prettier src --write",
     "------------------------------------------------": "",
-    "package": "tsx deploy/index.ts",
-    "package:latest": "npm run package latest",
-    "package:next": "npm run package next",
-    "package:patch": "npm run package patch",
-    "package:tgz": "npm run package tgz",
+    "package:latest": "ts-node deploy latest",
+    "package:next": "ts-node deploy next",
+    "package:patch": "ts-node deploy patch",
+    "package:tgz": "ts-node deploy tgz",
     "package:deprecate": "npm deprecate typescript-json \"Renamed to typia\""
   },
   "repository": {
@@ -66,15 +70,14 @@
     "commander": "^10.0.0",
     "comment-json": "^4.2.3",
     "inquirer": "^8.2.5",
-    "randexp": "^0.5.3",
-    "tsx": "^4.11.2"
+    "randexp": "^0.5.3"
   },
   "peerDependencies": {
     "typescript": ">=4.8.0 <5.5.0"
   },
   "devDependencies": {
-    "@microsoft/api-extractor": "^7.46.2",
-    "@swc/core": "^1.5.24",
+    "@rollup/plugin-terser": "^0.4.4",
+    "@rollup/plugin-typescript": "^11.1.6",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/inquirer": "^8.2.5",
     "@types/node": "^18.15.12",
@@ -82,12 +85,11 @@
     "@typescript-eslint/eslint-plugin": "^7.1.1",
     "@typescript-eslint/parser": "^7.1.1",
     "chalk": "^4.0.0",
-    "fast-glob": "^3.3.2",
     "prettier": "^3.2.5",
     "rimraf": "^5.0.5",
+    "rollup": "^4.18.0",
     "suppress-warnings": "^1.0.2",
     "ts-node": "^10.9.2",
-    "tsup": "^8.1.0",
     "typescript": "^5.4.5"
   },
   "stackblitzs": {
