--- a/benchmark/package.json
+++ b/benchmark/package.json
@@ -60,19 +60,18 @@
     "suppress-warnings": "^1.0.2",
     "tgrid": "^0.10.0",
     "ts-node": "^10.9.1",
-    "ts-patch": "^3.1.0",
+    "ts-patch": "^3.2.0",
     "tstl": "^3.0.0",
     "typescript": "^5.3.2",
     "uuid": "^8.3.2",
     "zod": "^3.19.1"
   },
   "dependencies": {
-    "@samchon/openapi": "^0.1.18",
     "randexp": "^0.5.3",
     "source-map-support": "^0.5.21",
     "suppress-warnings": "^1.0.2",
     "tstl": "^3.0.0",
     "uuid": "^9.0.1",
-    "typia": "../typia-6.0.5.tgz"
+    "typia": "../typia-6.0.6-dev.20240604.tgz"
   }
 }
