--- a/packages/typescript-json/package.json
+++ b/packages/typescript-json/package.json
@@ -1,6 +1,6 @@
 {
   "name": "typescript-json",
-  "version": "6.0.6-dev.20240604",
+  "version": "6.0.6",
   "description": "Superfast runtime validators with only one line",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -63,10 +63,10 @@
   },
   "homepage": "https://typia.io",
   "dependencies": {
-    "typia": "6.0.6-dev.20240604"
+    "typia": "6.0.6"
   },
   "peerDependencies": {
-    "typescript": ">=4.8.0 <5.5.0"
+    "typescript": ">=4.8.0 <5.6.0"
   },
   "stackblitzs": {
     "startCommand": "npm install && npm run test"
