--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "rimraf": "^5.0.5",
     "rollup": "^4.18.0",
     "suppress-warnings": "^1.0.2",
+    "tiny-glob": "^0.2.9",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
   },
