feat: Add 'test-esm/**' to GitHub Actions workflow triggers
This commit includes 'test-esm/**' in the paths that trigger the GitHub
Actions workflows for both push and pull_request events. This ensures
that the workflows run whenever changes are made to the 'test-esm'
directory.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,11 +4,13 @@ on:
     paths:
       - 'src/**'
       - 'test/**'
+      - 'test-esm/**'
       - 'package.json'
   pull_request:
     paths:
       - 'src/**'
       - 'test/**'
+      - 'test-esm/**'
       - 'package.json'
 jobs:
   Ubuntu:
