feat(package.json): add publishConfig for package exports
This commit adds a `publishConfig` section to the `package.json` file.
This section specifies the entry points for different module formats
like CommonJS, ESM, and TypeScript. It also provides entry points for
specific parts of the package like `./lib`, `./lib/transform`, and
`./lib/executable/*.js`. This configuration is important for tools
that consume this package, as it allows them to import or require the
package in a way that is compatible with their setup.

--- a/package.json
+++ b/package.json
@@ -102,5 +102,39 @@
     "lib",
     "src"
   ],
-  "private": true
+  "private": true,
+  "publishConfig": {
+    "exports": {
+      ".": {
+        "bun": "./src/index.ts",
+        "node": "./lib/index.js",
+        "import": "./lib/index.mjs",
+        "require": "./lib/index.js",
+        "types": "./lib/index.d.ts",
+        "default": "./lib/index.js"
+      },
+      "./lib": {
+        "bun": "./src/index.ts",
+        "node": "./lib/index.js",
+        "import": "./lib/index.mjs",
+        "require": "./lib/index.js",
+        "types": "./lib/index.d.ts",
+        "default": "./lib/index.js"
+      },
+      "./lib/transform": {
+        "bun": "./src/transform.ts",
+        "node": "./lib/transform.js",
+        "import": "./lib/transform.mjs",
+        "require": "./lib/transform.js",
+        "types": "./lib/transform.d.ts",
+        "default": "./lib/transform.js"
+      },
+      "./lib/executable/*.js": {
+        "require": "./lib/executable/*.js",
+        "types": "./lib/executable/*.d.ts",
+        "default": "./lib/executable/*.js"
+      },
+      "./package.json": "./package.json"
+    }
+  }
 }
