--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,3 +33,4 @@ jobs:
       - run: npm install
       - run: npm run build
       - run: npm run test
+      - run: npm run test:bun -- --skipSetup
