--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,6 +20,24 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 20.x
+      - uses: actions/cache@v4
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+
+      - run: npm install
+      - run: npm run build
+      - run: npm run test
+
+  Ubuntu-Bun:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20.x
       - uses: oven-sh/setup-bun@v1
         with:
           bun-version: latest
@@ -32,5 +50,13 @@ jobs:
 
       - run: npm install
       - run: npm run build
-      - run: npm run test
-      - run: npm run test:bun -- --skipSetup
+      - run: npm run test:bun
+
+  action-timeline:
+    needs:
+      - Ubuntu
+      - Ubuntu-Bun
+    if: ${{ always() }}
+    runs-on: ubuntu-latest
+    steps:
+      - uses: Kesin11/actions-timeline@v2
