feat: Add build.yml to workflow triggers
This commit includes '.github/workflows/build.yml' in the list of paths
that trigger the GitHub Actions workflow on both push and pull request
events. This ensures that changes to the workflow itself also trigger
a build.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,12 +6,14 @@ on:
       - 'test/**'
       - 'test-esm/**'
       - 'package.json'
+      - '.github/workflows/build.yml'
   pull_request:
     paths:
       - 'src/**'
       - 'test/**'
       - 'test-esm/**'
       - 'package.json'
+      - '.github/workflows/build.yml'
 jobs:
   Ubuntu:
     runs-on: ubuntu-latest
