feat: Improve command line argument parsing
This commit introduces the use of `parseArgs` from `node:util` to handle
command line arguments in a more structured and robust way. This change
affects the `deploy/bun.ts` and `deploy/index.ts` files.

In addition, the scripts in `package.json` have been updated to reflect
the new way of passing arguments to the deploy scripts.

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "scripts": {
     "test": "npm run package:tgz",
     "test:bun": "ts-node deploy/bun.ts",
-    "test:template": "npm run test template",
+    "test:template": "npm run --tag test --template",
     "-------------------------------------------------": "",
     "build": "rimraf lib && tsc && rollup -c",
     "dev": "rimraf lib && tsc --watch",
@@ -24,10 +24,10 @@
     "eslint:fix": "eslint ./**/*.ts --fix",
     "prettier": "prettier src --write",
     "------------------------------------------------": "",
-    "package:latest": "ts-node deploy latest",
-    "package:next": "ts-node deploy next",
-    "package:patch": "ts-node deploy patch",
-    "package:tgz": "ts-node deploy tgz",
+    "package:latest": "ts-node deploy --tag latest",
+    "package:next": "ts-node deploy --tag next",
+    "package:patch": "ts-node deploy --tag patch",
+    "package:tgz": "ts-node deploy --tag tgz",
     "package:deprecate": "npm deprecate typescript-json \"Renamed to typia\""
   },
   "repository": {
