feat: change test:bun script to use bun
The `test:bun` script in `package.json` has been updated to use `bun`
directly instead of `ts-node`. This change is expected to improve the
performance and reliability of the test script.

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "scripts": {
     "test": "npm run package:tgz",
-    "test:bun": "ts-node deploy/bun.ts",
+    "test:bun": "bun run deploy/bun.ts",
     "test:template": "npm run --tag test --template",
     "-------------------------------------------------": "",
     "build": "rimraf lib && tsc && rollup -c",
