--- a/packages/typescript-json/package.json
+++ b/packages/typescript-json/package.json
@@ -1,6 +1,6 @@
 {
   "name": "typescript-json",
-  "version": "6.1.0",
+  "version": "6.1.1-dev.20240614",
   "description": "Superfast runtime validators with only one line",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -64,7 +64,7 @@
   },
   "homepage": "https://typia.io",
   "dependencies": {
-    "typia": "6.1.0"
+    "typia": "6.1.1-dev.20240614"
   },
   "peerDependencies": {
     "typescript": ">=4.8.0 <5.6.0"
