--- a/debug/package.json
+++ b/debug/package.json
@@ -15,6 +15,6 @@
     "typescript": "^5.4.2"
   },
   "dependencies": {
-    "typia": "../typia-7.0.0-dev.20240620.tgz"
+    "typia": "../typia-6.2.1.tgz"
   }
 }
