--- a/website/package.json
+++ b/website/package.json
@@ -36,8 +36,8 @@
     "react-dom": "^18.2.0",
     "tgrid": "^1.0.1",
     "tstl": "^3.0.0",
-    "typescript": "^5.4.5",
-    "typia": "^6.2.0"
+    "typescript": "5.4.5",
+    "typia": "6.2.2"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
