--- a/errors/package.json
+++ b/errors/package.json
@@ -32,6 +32,6 @@
     "typescript": "^5.3.2"
   },
   "dependencies": {
-    "typia": "../typia-6.3.0-dev.20240625.tgz"
+    "typia": "../typia-6.3.0.tgz"
   }
 }
