--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "typia",
-  "version": "6.3.0-dev.20240625",
+  "version": "6.3.0",
   "description": "Superfast runtime validators with only one line",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -74,7 +74,7 @@
     "randexp": "^0.5.3"
   },
   "peerDependencies": {
-    "typescript": ">=4.8.0 <5.5.0"
+    "typescript": ">=4.8.0 <5.6.0"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^26.0.1",
