--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,6 +15,24 @@ on:
       - 'package.json'
       - '.github/workflows/build.yml'
 jobs:
+  Build-and-Upload-topkg-pr-new:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20.x
+      - uses: actions/cache@v4
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+
+      - run: npm install
+      - run: npm run build
+      - run: npx pkg-pr-new publish
+
   NodeJS:
     runs-on: ubuntu-latest
     steps:
@@ -64,6 +82,7 @@ jobs:
 
   action-timeline:
     needs:
+      - Build-and-Upload-topkg-pr-new
       - NodeJS
       - Bun
     if: ${{ always() }}
