feat(build.yml): use compact option for pkg.pr.now
The change modifies the build.yml workflow file to use the --compact
option when publishing with pkg.pr.now. This option reduces the size
of the published package, potentially speeding up the publishing process.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,7 +35,8 @@ jobs:
         run: |
           jq 'del(.private)' package.json > package.json.tmp
           mv package.json.tmp package.json
-      - run: npx pkg-pr-new publish
+      - name: upload to pkg.pr.now
+        run: npx pkg-pr-new publish --compact
       - name: Upload tgz for Artifactory
         uses: actions/upload-artifact@v4
         with:
