--- a/package.json
+++ b/package.json
@@ -95,7 +95,7 @@
     "ts-node": "^10.9.2",
     "typescript": "^5.5.2"
   },
-  "stackblitzs": {
+  "stackblitz": {
     "startCommand": "npm install && npm run test"
   },
   "files": [
