--- a/packages/typescript-json/package.json
+++ b/packages/typescript-json/package.json
@@ -1,6 +1,6 @@
 {
   "name": "typescript-json",
-  "version": "6.3.3",
+  "version": "6.4.0",
   "description": "Superfast runtime validators with only one line",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -63,12 +63,12 @@
   },
   "homepage": "https://typia.io",
   "dependencies": {
-    "typia": "6.3.3"
+    "typia": "6.4.0"
   },
   "peerDependencies": {
     "typescript": ">=4.8.0 <5.6.0"
   },
-  "stackblitzs": {
+  "stackblitz": {
     "startCommand": "npm install && npm run test"
   },
   "files": [
