feat(package.json): add sideEffects property
This commit adds the "sideEffects" property to the package.json file. This
property is set to false, indicating to webpack that the code has no
observable side effects, which can help with tree shaking.

--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
   "stackblitz": {
     "startCommand": "npm install && npm run test"
   },
+  "sideEffects": false,
   "files": [
     "LICENSE",
     "README.md",
