feat: Add tsconfig.json and rollup.config.js to CI triggers
This commit includes 'tsconfig.json' and 'rollup.config.js' in the list
of files that, when changed, will trigger the CI build. This ensures that
any changes to the TypeScript configuration or the Rollup build process
are immediately tested.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,6 +6,8 @@ on:
       - 'test/**'
       - 'test-esm/**'
       - 'package.json'
+      - 'tsconfig.json'
+      - 'rollup.config.js'
       - '.github/workflows/build.yml'
   pull_request:
     paths:
@@ -13,6 +15,8 @@ on:
       - 'test/**'
       - 'test-esm/**'
       - 'package.json'
+      - 'tsconfig.json'
+      - 'rollup.config.js'
       - '.github/workflows/build.yml'
 jobs:
   Build-and-Upload-to-pkg-pr-new-and-artifactory:
