--- a/packages/typescript-json/package.json
+++ b/packages/typescript-json/package.json
@@ -1,6 +1,6 @@
 {
   "name": "typescript-json",
-  "version": "6.5.3",
+  "version": "6.5.4-dev.20240721",
   "description": "Superfast runtime validators with only one line",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -63,7 +63,7 @@
   },
   "homepage": "https://typia.io",
   "dependencies": {
-    "typia": "6.5.3"
+    "typia": "6.5.4-dev.20240721"
   },
   "peerDependencies": {
     "typescript": ">=4.8.0 <5.6.0"
