feat: switch from comment-json to jsonc-parser

--- a/package.json
+++ b/package.json
@@ -70,9 +70,9 @@
     "@samchon/openapi": "^0.4.3",
     "citty": "^0.1.6",
     "commander": "^10.0.0",
-    "comment-json": "^4.2.3",
     "consola": "^3.2.3",
     "inquirer": "^8.2.5",
+    "jsonc-parser": "^3.3.1",
     "package-manager-detector": "^0.1.0",
     "randexp": "^0.5.3"
   },
