feat(bin): Move executable to bin directory
This commit moves the executable file from the lib directory to the bin
directory. The .gitignore file has been updated to not ignore the bin
directory. The package.json file has been updated to reflect this change
in the "bin" property.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "typings": "lib/index.d.ts",
   "module": "lib/index.mjs",
   "bin": {
-    "typia": "./lib/executable/typia.js"
+    "typia": "./bin/typia.cjs"
   },
   "tsp": {
     "tscOptions": {
