feat(package.json): add cli run commands

--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "test:template": "npm run --tag test --template",
     "-------------------------------------------------": "",
     "build": "rimraf lib && tsc && tsc -p ./tsconfig.cli.json && rollup -c",
+    "cli": "node  ./bin/typia.mjs",
     "dev": "rimraf lib && tsc --watch",
+    "dev:cli": "ts-node ./src/index.ts",
     "eslint": "eslint ./**/*.ts",
     "eslint:fix": "eslint ./**/*.ts --fix",
     "prettier": "prettier src --write",
