Retry sitemap again.

--- a/website/package.json
+++ b/website/package.json
@@ -4,10 +4,10 @@
   "description": "Typia Guide Documents",
   "private": true,
   "scripts": {
-    "build": "rimraf .next && rimraf out && npm run build:typedoc && next build && next-sitemap",
+    "build": "rimraf .next && rimraf out && npm run build:typedoc && next build && node build/sitemap",
     "build:typedoc": "typedoc --plugin typedoc-github-theme --theme typedoc-github-theme",
     "deploy": "node build/deploy",
-    "dev": "next dev",
+    "dev": "next-sitemap && next dev",
     "prepare": "node build/raw && rspack && npm run build:typedoc"
   },
   "repository": {
