Add failure test cases for `Sequence<N>`

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "-------------------------------------------------": "",
     "build": "rimraf lib && tsc && rollup -c",
     "dev": "tsc --project tsconfig.test.json --watch",
+    "dev:errors": "tsc --project tsconfig.errors.json --watch",
     "eslint": "eslint ./**/*.ts",
     "eslint:fix": "eslint ./**/*.ts --fix",
     "prettier": "prettier src --write",
